--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.5",
